--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -5,6 +5,7 @@ $white: #fff;
 .navbar {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   background-color: $white;
   border-bottom: 1px solid #eee;
@@ -15,7 +16,7 @@ $white: #fff;
 .nav-container {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0.8rem 2rem;
+  padding: 0 2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -37,6 +38,7 @@ $white: #fff;
     display: flex;
     align-items: center;
     gap: 2.5rem;
+    margin: 0;
 
     li a {
       font-family: 'Montserrat', sans-serif;
@@ -125,6 +127,4 @@ $white: #fff;
       }
     }
   }
-
-
 }
