--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,10 @@
 // src/styles.scss
 @import 'assets/styles/variables';
 @import 'assets/styles/mixins';
+
+body, html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
