feat(Styles): Add final style;

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -36,7 +36,7 @@
       <div class="info-grid">
         <div>
           <h3>{{ 'CONTACT.CONTACT' | translate }}</h3>
-          <p>{{ 'CONTACT.PHONE' | translate }}<br />+38164 179 20 32</p>
+          <p>{{ 'CONTACT.PHONE' | translate }}<br />+381 64 179 20 32</p>
         </div>
         <div>
           <h3>{{ 'CONTACT.ADDRESS' | translate }}</h3>
@@ -48,7 +48,7 @@
             <a
               [href]="'mailto:' + 'gorantraheja@gmail.com'"
               class="email-link"
-            >gorantraheja[at]gmail.com</a
+            >gorantraheja&#64;gmail.com</a
             >
           </p>
         </div>
