--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -9,8 +9,8 @@
     <ul class="nav-links" [class.active]="isMenuOpen">
       <li><a routerLink="/">{{ 'NAV.HOME' | translate }}</a></li>
       <li><a routerLink="/gallery">{{ 'NAV.GALLERY' | translate }}</a></li>
-      <li><a routerLink="/" fragment="contact">{{ 'NAV.CONTACT' | translate }}</a></li>
-      <li><a routerLink="/" fragment="about">{{ 'NAV.ABOUT' | translate }}</a></li>
+      <li><a (click)="scrollTo('contact')">{{ 'NAV.CONTACT' | translate }}</a></li>
+      <li><a (click)="scrollTo('about')">{{ 'NAV.ABOUT' | translate }}</a></li>
       <li class="language-switch">
         <span (click)="setLang('serbian')">SR</span>
         <span (click)="setLang('english')">EN</span>
