--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -39,6 +39,7 @@ $white: #fff;
     align-items: center;
     gap: 2.5rem;
     margin: 0;
+    list-style: none;
 
     li a {
       font-family: 'Montserrat', sans-serif;
@@ -92,7 +93,7 @@ $white: #fff;
         left: 0;
         width: 100%;
         background-color: $white;
-        padding: 1.5rem;
+        padding: 1.5rem 0;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         gap: 1.5rem;
 
