feat(Home): Fix scroll for home page;

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="home">
   <div class="hero-overlay">
     <h1 [innerHTML]="'HOME.TITLE' | translate"></h1>
   </div>
