--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     </a>
 
     <ul class="nav-links" [class.active]="isMenuOpen">
-      <li><a routerLink="/" (click)="closeMenu()">{{ 'NAV.HOME' | translate }}</a></li>
+      <li><a  routerLink="/" (click)="scrollTo('home'); closeMenu()">{{ 'NAV.HOME' | translate }}</a></li>
       <li><a routerLink="/gallery" (click)="closeMenu()">{{ 'NAV.GALLERY' | translate }}</a></li>
       <li><a (click)="scrollTo('contact'); closeMenu()">{{ 'NAV.CONTACT' | translate }}</a></li>
       <li><a (click)="scrollTo('about'); closeMenu()">{{ 'NAV.ABOUT' | translate }}</a></li>
