fix(Styles): Add font Helvetica with extension woff2;;

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,8 +13,9 @@ body, html {
 
 @font-face {
   font-family: 'Helvetica';
-  src: url('/assets/font/helvetica/Helvetica.ttf') format('truetype');
-  font-weight: 400;
+  src: url("/assets/font/helvetica/Helvetica.woff2") format("woff2");
+  font-weight: 100 900;
   font-style: normal;
+  font-display: swap;
 }
 
