fix(Footer): Add mobile phone link;

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -12,7 +12,7 @@
       <h4>{{ 'FOOTER.CONTACT' | translate }}</h4>
       <p>
         <span class="material-icons-outlined">phone</span>
-        +38164 179 20 32
+        <a [href]="'tel:+38164 179 20 32' + 'gorantraheja@gmail.com'">+38164 179 20 32</a>
       </p>
       <p>
         <span class="material-icons-outlined">mail</span>
